# libkrigingtemplate

./: .gitignore  DESCRIPTION  NAMESPACE  README.md
.github/workflows/: R-CMD-INSTALL.yml  R-CMD-check-as-CRAN.yaml  R-CMD-check-in-rhub-images.yml  R-CMD-check.yaml  R-devtools-install_github.yml  R-submit-on-CRAN.yml  guidelines.yml  rust.yml
R/: extendr-wrappers.R
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml  build.rs
src/rust/src/: fit_and_predict.rs  lib.rs  linear_regression.rs  math_types.rs  math_utils.rs  rectangle_solve.rs  version.rs
src/rust/src/r_binding/: conversion.rs  mod.rs
tests/: testthat.R
tests/testthat/: test-full_version.R  test-linear_regression.R
