[package]
name = 'libkrigingtemplate'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']

[dependencies]
anyhow = "1.0"
extendr-api = { version = "0.6", features = ["ndarray"] }
nalgebra = "0.32"
ndarray = "*"
rand = "0.8"
rand_distr = "0.4"

[build-dependencies]
vergen = { version = "8", features = ["git", "gitoxide", "cargo", "rustc", "build"] }

[dev-dependencies]
rstest = "0.18"
